临时提交-待测试

--- a/.env
+++ b/.env
@@ -1,7 +1,10 @@
-SERVER_HOST=baby-time.com
-SERVER_PORT=48081
+SERVER_SCHEME=http
+SERVER_HOST=127.0.0.1
+SERVER_PORT=18080
 IS_DEBUG=true
 TENANT_ID=a84b19e5e2faf67af557785fdfc87270
+# Public API uses tenantCode in path: /api/public/{tenantCode}/...
+TENANT_CODE=1
 V=
 APP_NAME=蛙蛙烟花-平价烟花平台
 //允许支持的平台
